# lzgit

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: release.yml
scripts/: build-install-local.sh
src/: branch.rs  commit.rs  conflict.rs  events.rs  git.rs  git_diff_loader.rs  git_ops.rs  highlight.rs  main.rs  openrouter.rs  preview_cache.rs  preview_loader.rs
src/ui/tabs/: explorer.rs  git.rs  log.rs  mod.rs
