[package]
name = "tui-explorer-rs"
version = "0.1.0"
edition = "2024"
description = "A modern, fast terminal file explorer with mouse support"
readme = "README.md"
license = "MIT"
keywords = ["tui", "terminal", "file-manager", "explorer", "cli"]
categories = ["command-line-utilities", "filesystem"]
repository = "https://github.com/yourusername/tui-explorer-rs"

[[bin]]
name = "te"
path = "src/main.rs"

[dependencies]
arboard = "3.6.1"
crossterm = "0.29.0"
ratatui = "0.30.0"
ratatui-image = { version = "10.0.2", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25.9"
base64 = "0.22.1"

dotenvy = "0.15.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
ureq = { version = "2.12.1", features = ["json"] }

syntect = { version = "5.2.0", default-features = false, features = ["default-themes", "default-syntaxes", "parsing", "regex-fancy"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
