[package]
name = "lzgit"
version = "0.4.8"
edition = "2024"
description = "A modern, fast TUI file explorer with Git integration"
readme = "README.md"
license = "MIT"
keywords = ["tui", "terminal", "git", "file-manager", "cli"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/FanFusion/lzgit"
authors = ["FanFusion"]

[[bin]]
name = "lzgit"
path = "src/main.rs"

[dependencies]
arboard = "3.6.1"
crossterm = "0.29.0"
ratatui = "0.30.0"
ratatui-image = { version = "10.0.2", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25.9"
base64 = "0.22.1"

dotenvy = "0.15.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
ureq = { version = "2.12.1", features = ["json"] }

syntect = { version = "5.2.0", default-features = false, features = ["default-themes", "default-syntaxes", "parsing", "regex-fancy"] }
unicode-width = "0.2.0"
portable-pty = "0.8"
vt100 = "0.15"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
